/*
 * $Id: ChangeLog,v 1.6217 2008/09/16 07:40:00 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-09-16 12:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * source\rdd\dbf1.c
    * now can be able to disable FOXPRO compatibility rdd at hbsetup.ch
      I'm planning to do the same for other features.
  * source\pp\ppgen.c
  * source\rdd\fieldhb.c
  * source\rdd\usrrdd\rdds\adordd.prg
  * source\rdd\usrrdd\rdds\ansirdd.prg
    * cleanning warnnings

2008-09-16 09:38 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * rdd\bmdbfcdx\bmdbfcdx1.c
    * removed some warnnings

2008-09-15 17:38 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * rdd\bmdbfcdx\bmdbfcdx1.c
    * implemented DBOI_TEMPLATE and DBOI_MULTIKEY	
  * rdd\workarea.c
    ! fixed return value of DBI_POSITIONED over ulrecno = 0 as FALSE
  * rtl\hbcomprs.c
    * using item api instead of hardcode references.

2008-09-11 00:06 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/common/Makefile
    - Removed hbfhnd.c .
  * source/rtl/Makefile
    - Removed mlctopos.c and mpostolc.c .
    + Added mlcfunc.c .
  * source/rdd/Makefile
    + Added dbcmdx.c, fieldhb.c, dbcmdhb.c, dbcmd53.c, dblistx.prg,
      rddinfo.c, dbupdatx.prg, dbjoinx.prg, dbsortx.prg,
      dbstruxx.prg, dbtotalx.prg and dbstruxu.prg .
  * source/odbc/odbc.c
    * Changed HSTMT to SQL_SUCCESS for detect SQL header.

2008-09-10 11:00 UTC-0800 Pritpal Bedi <pritpal@vouchcac.com>
  * source/rtl/hbgtcore.c
    + Added missing lines as below in hb_gt_def_info()

      case HB_GTI_NOTIFIERBLOCK:
         if( pGT->pNotifierBlock )
         {
            hb_itemRelease( pGT->pNotifierBlock );
            pGT->pNotifierBlock = NULL;
         }
         if( hb_itemType( pInfo->pNewVal ) & HB_IT_BLOCK )