@@ -1,5 +1,5 @@
 /*
- * $Id: bmdbfcdx1.c,v 1.47 2008/09/15 15:46:47 marchuet Exp $
+ * $Id: bmdbfcdx1.c,v 1.48 2008/09/16 07:40:07 marchuet Exp $
  */
 
 /*
@@ -6518,7 +6518,7 @@ static ERRCODE hb_cdxSeek( CDXAREAP pArea, BOOL fSoftSeek, PHB_ITEM pKeyItm, BOO
 
    if ( ! pTag )
    {
-      hb_cdxErrorRT( pArea, EG_NOORDER, 1201, NULL, 0, EF_CANDEFAULT );
+      hb_cdxErrorRT( pArea, EG_NOORDER, EDBF_NOTINDEXED, NULL, 0, EF_CANDEFAULT );
       return FAILURE;
    }
    else
@@ -7957,6 +7957,9 @@ static ERRCODE hb_cdxOrderCreate( CDXAREAP pArea, LPDBORDERCREATEINFO pOrderInfo
    if( pArea->lpdbPendingRel )
       SELF_FORCEREL( ( AREAP ) pArea );
 
+   if( hb_itemGetCLen( pOrderInfo->abExpr ) > CDX_MAXKEY )
+      return hb_cdxErrorRT( pArea, EG_DATAWIDTH, EDBF_KEYLENGTH, NULL, 0, 0 );
+
    /* If we have a codeblock for the expression, use it */
    if ( pOrderInfo->itmCobExpr )
       pKeyExp = hb_itemNew( pOrderInfo->itmCobExpr );
@@ -8007,7 +8010,7 @@ static ERRCODE hb_cdxOrderCreate( CDXAREAP pArea, LPDBORDERCREATEINFO pOrderInfo
       hb_vmDestroyBlockOrMacro( pKeyExp );
       SELF_GOTO( ( AREAP ) pArea, ulRecNo );
       hb_cdxErrorRT( pArea, bType == 'U' ? EG_DATATYPE : EG_DATAWIDTH,
-                     1026, NULL, 0, 0 );
+                     EDBF_INVALIDKEY, NULL, 0, 0 );
       return FAILURE;
    }
    if ( pArea->lpdbOrdCondInfo )
@@ -8938,7 +8941,7 @@ static ERRCODE hb_cdxOrderInfo( CDXAREAP pArea, USHORT uiIndex, LPDBORDERINFO pI
             }
             else
             {
-               hb_cdxErrorRT( pArea, 0, 1052, NULL, 0, 0 );
+               hb_cdxErrorRT( pArea, 0, EDBF_NOTCUSTOM, NULL, 0, 0 );
             }
          }
          break;
@@ -8986,7 +8989,7 @@ static ERRCODE hb_cdxOrderInfo( CDXAREAP pArea, USHORT uiIndex, LPDBORDERINFO pI
             }
             else
             {
-               hb_cdxErrorRT( pArea, 0, 1052, NULL, 0, 0 );
+               hb_cdxErrorRT( pArea, 0, EDBF_NOTCUSTOM, NULL, 0, 0 );
             }
          }
          break;
